[package]
name = "mpesa-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Irfan Ghat"]
categories = ["payment", "sdk"]
description = "This crate provides a streamlined interface for integrating M-Pesa, a widely used mobile money service, into your applications."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
chrono = "0.4.38"
dotenv = "0.15.0"
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
