[package]
name = "mpesa-sdk"
version = "0.1.2"
edition = "2021"
authors = ["Irfan Ghat"]
description = "This crate provides a streamlined interface for integrating M-Pesa, a widely used mobile money service, into your applications."
homepage = "https://github.com/lexara-prime-ai/MPESA_SDK"
repository = "https://github.com/lexara-prime-ai/MPESA_SDK"
readme = "README.md"
keywords = ["payment", "web", "http", "api"]
categories = ["sdk"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
base64 = "0.22.1"
chrono = "0.4.38"
dotenv = "0.15.0"
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
